caspar (20020313)

  * mk/docbook.mk: clean target more robust: `-rm' instead of `rm', now uses
    caspar/{html,print}.dsl.
  * sgml/{html,print}.dsl: added.  Used by mk/docbook.mk.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Wed, 13 Mar 2002 13:09:09 +0100

caspar (20020301)

  * README: added requirements section.
  * mk/docbook.mk: added: useful for generating PostScript and stuff from LaTeX
     or DocBook XML sources.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Fri,  1 Mar 2002 16:18:54 +0100

caspar (20020227)

  * README: finally got to document it.
  * mk/caspar.mk: renamed `DIR' to `SDIR'; renamed XXTARGETS to LOAD: more
     descriptive name.
  * mk/caspar.mk: used to be called mk/install.mk.
  * mk/caspar.mk: added target `load'.  added variable CDIR.  got rid of
     obsolete comments.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Wed, 27 Feb 2002 18:06:16 +0100

caspar (20020226)

  * mk/install.mk: we conditionally set SRDIRS using SUH and DIR: now Makefiles
     can use these two vars too.
  * mk/install.mk: Now CPDIRS uses <file>-install as targetname, as SRDIRS
     already did.
  * First tarball build; preliminary release

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Tue, 26 Feb 2002 18:36:49 +0100