@@ -1,1 +1,5 @@
-Joost Kooij, for helping with the embrionic caspar implementation, looooong ago.
+Joost Kooij, for helping with the embrionic caspar mk/ implementation,
+looooong ago.
+
+Francis J. Lacoste, for helping me writing print.dsl and html.dsl.
+
