@@ -1,6 +1,15 @@
+caspar ( )
+
+  * mk/docbook.mk: jade will quit after max 10 errors, not 200: we will be
+    able to see the very first error without having to scroll back.  Added
+    support for DocBook SGML sourcefiles.  Added some more comments on usage.
+  * README: updated.
+
+ -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>
+
 caspar (20020313)
 
-  * mk/docbook.mk: clean target more robust: `-rm' instead of `rm', now uses
+  * mk/docbook.mk: clean target more robust: `-rm' instead of `rm'. Now uses
     caspar/{html,print}.dsl.
   * sgml/{html,print}.dsl: added.  Used by mk/docbook.mk.
 
